create form to get useranem

--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 
 <h2>Visualize your GitHub contributions.</h2>
 
+<form class="preview-toolbox">
+    <label><span class="octicon octicon-mark-github"></span>username</label>
+    <input type="text" class="form-gh-username"></input>
+    <button type="button" class="btn form-preview">Preview</button>
+</form>
+
+<div id="preview-display">
+</div>
+
 <script src="/main.js"></script>
 </body>
 
