--- a/test.html
+++ b/test.html
@@ -13,5 +13,56 @@
 <a href="https://github.com/ikuwow" class="gh-contributions" data-gh-username="ikuwow" target="_blank">ikuwow's contributions</a>
 <script src="/widget.js"></script>
 
+<h2>inside iframe</h2>
+
+<div class="inside-frame">
+    <div class="cbox">
+        <div class="ctitle"><img src="https://avatars.githubusercontent.com/ikuwow?s=40"/>ikuwow's Contributions</div>
+        <div class="cbody">
+          <img src="http://ghchart.rshah.org/ikuwow" alt="ikuwow's Github chart" />
+          <a href="https://github.com/ikuwow" target="_blank">See on GitHub</a>
+        </div>
+    </div>
+</div>
+
+<style>
+
+* {
+    font: 13px / 1.4 Helvetica, arial, nimbussansl, liberationsans, freesans, clean, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+.cbox {
+    max-width: 728px;
+    border: 1px solid #d8d8d8;
+    border-radius: 3px;
+    background: #fff;
+    overflow: hidden;
+}
+.ctitle {
+    background-color: #f5f5f5;
+    border-bottom: 1px solid #d8d8d8;
+    padding: 6px 10px 8px;
+    font-size: 14px;
+    line-height: 17px;
+    font-weight: bold;
+}
+.ctitle img {
+    height: 20px;
+    width: 20px;
+    margin-top 2px;
+    margin-right: 4px;
+}
+.cbody {
+    padding: 4px;
+}
+.cbody a {
+    color: #4078c0;
+    text-decoration: none;
+    font-size: 11px;
+    float: right;
+    padding: 4px 10px 8px;
+}
+
+</style>
+
 </body>
 </html>
