Add basic design

--- a/index.html
+++ b/index.html
@@ -5,23 +5,40 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/primer/2.5.0/primer.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/3.3.0/octicons.min.css"/>
   <link rel="stylesheet" href="/main.css"/>
-
 </head>
 
 <body>
 
-<h1>yourcontribution</h1>
+<div class="container">
+  <div class="columns">
+    <div class="four-fifths column centered">
+      <h1>yourcontribution</h1>
 
-<h2>Visualize your GitHub contributions.</h2>
+      <h2>Visualize your GitHub contributions.</h2>
 
-<form class="preview-toolbox">
-    <label><span class="octicon octicon-mark-github"></span>username</label>
-    <input type="text" class="form-gh-username"></input>
-    <button type="button" class="btn form-preview">Preview</button>
-</form>
 
-<div id="preview-display">
-</div>
+      <form class="preview-toolbox flex-table">
+        <div class="flex-table-item">
+          <label><span class="octicon octicon-mark-github"></span>username</label>
+        </div>
+        <div class="flex-table-item flex-table-item-primary">
+          <input type="text" class="input-block form-gh-username" placeholder="Type your username here"></input>
+        </div>
+        <div class="flex-table-item">
+          <button type="button" class="btn form-preview">Preview &amp; Get Code</button>
+        </div>
+      </form>
+
+      <div id="preview-display" class="blankslate">
+          <h3>Preview</h3>
+      </div>
+
+    </div>
+  </div><!-- .columns -->
+  <footer>
+    <p>Created by <a href="http://ikuwow.github.io" target="_blank">ikuwow</a>, Powered by <a href="http://ghchart.rshah.org" target="_blank">Github Chart API</a></p>
+  </footer>
+</div><!-- .container -->
 
 <script src="/main.js"></script>
 </body>
