Add copy folder

--- a/index.html
+++ b/index.html
@@ -30,13 +30,19 @@
       </form>
 
       <div id="preview-display" class="blankslate">
-          <h3>Preview</h3>
+          <h3>Preview Area</h3>
       </div>
+
+      <textarea class="get-code input-contrast" readonly>
+<a href="http://github.com/[:username]" class="gh-contributions" data-gh-username="[:username]" target="_blank" style="display: none;">[:username]'s contributions</a><script src="/widget.js"></script></textarea>
 
     </div>
   </div><!-- .columns -->
   <footer>
-    <p>Created by <a href="http://ikuwow.github.io" target="_blank">ikuwow</a>, Powered by <a href="http://ghchart.rshah.org" target="_blank">Github Chart API</a></p>
+      <p>
+      Created by <a href="http://ikuwow.github.io" target="_blank">ikuwow</a>,
+      Powered by <a href="http://ghchart.rshah.org" target="_blank">Github Chart API</a>.
+      &nbsp;<a href="https://github.com/ikuwow/yourcontribution" target="_blank">Fork me on GitHub</a></p>
   </footer>
 </div><!-- .container -->
 
