--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/primer/2.5.0/primer.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/3.3.0/octicons.min.css"/>
-  <link rel="stylesheet" href="/main.css"/>
+  <link rel="stylesheet" href="./main.css"/>
 </head>
 
 <body>
@@ -56,7 +56,7 @@ ga('send', 'pageview');
   </footer>
 </div><!-- .container -->
 
-<script src="/main.js"></script>
+<script src="./main.js"></script>
 </body>
 
 </html>
