--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ ga('send', 'pageview');
       </div>
 
       <textarea class="get-code input-contrast" readonly>
-<a href="http://github.com/[:username]" class="gh-contributions" data-gh-username="[:username]" target="_blank" style="display: none;">[:username]'s contributions</a><script src="/widget.js"></script></textarea>
+<a href="http://github.com/[:username]" class="gh-contributions" data-gh-username="[:username]" target="_blank">[:username]'s contributions</a><script src="http://ikuwow.github.io/yourcontribution/widget.js"></script></textarea>
 
     </div>
   </div><!-- .columns -->
