--- a/test.html
+++ b/test.html
@@ -10,8 +10,6 @@
 
 <h1>widget test</h1>
 
-<a href="https://github.com/ikuwow" class="gh-contributions" data-gh-username="ikuwow" target="_blank">ikuwow's contributions</a>
-<script src="/widget.js"></script>
 
 <h2>inside iframe</h2>
 
@@ -24,6 +22,8 @@
         </div>
     </div>
 </div>
+
+<a href="http://github.com/javatea" class="gh-contributions" data-gh-username="javatea" target="_blank">javatea's contributions</a><script src="http://localhost:8448/yourcontribution//widget.js"></script>
 
 <style>
 
