Add spaces to design

--- a/index.html
+++ b/index.html
@@ -23,10 +23,7 @@ ga('send', 'pageview');
   <div class="columns">
     <div class="four-fifths column centered">
       <h1>yourcontribution</h1>
-
-      <h2>Visualize your GitHub contributions.</h2>
-
-
+      <h2>GitHub contribution chart widget</h2>
       <form class="preview-toolbox flex-table">
         <div class="flex-table-item">
           <label><span class="octicon octicon-mark-github"></span>username</label>
