--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ ga('send', 'pageview');
       <h2>GitHub contribution chart widget</h2>
       <form class="preview-toolbox flex-table">
         <div class="flex-table-item">
-          <label><span class="octicon octicon-mark-github"></span>username</label>
+          <label><span class="octicon octicon-mark-github"></span>https://github.com/</label>
         </div>
         <div class="flex-table-item flex-table-item-primary">
           <input type="text" class="input-block form-gh-username" placeholder="Type your username here"></input>
