Disable empty submit and enter submit

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ ga('send', 'pageview');
         </div>
         <div class="flex-table-item flex-table-item-primary">
           <input type="text" class="input-block form-gh-username" placeholder="Type your username here"></input>
+          <input type="text" name="dummy" style="display:none;">
         </div>
         <div class="flex-table-item">
           <button type="button" class="btn form-preview">Preview &amp; Get Code</button>
