--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ ga('send', 'pageview');
           <label><span class="octicon octicon-mark-github"></span>https://github.com/</label>
         </div>
         <div class="flex-table-item flex-table-item-primary">
-          <input type="text" class="input-block form-gh-username" placeholder="Type your username here"></input>
+          <input type="text" class="input-block form-gh-username" placeholder="Input your GitHub username here"></input>
           <input type="text" name="dummy" style="display:none;">
         </div>
         <div class="flex-table-item">
