--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ ga('send', 'pageview');
 <div class="container">
   <div class="columns">
     <div class="four-fifths column centered">
-      <h1>yourcontribution</h1>
+      <h1>yourcontributions</h1>
       <h2>GitHub contribution chart widget</h2>
       <form class="preview-toolbox flex-table">
         <div class="flex-table-item">
@@ -42,7 +42,7 @@ ga('send', 'pageview');
       </div>
 
       <textarea class="get-code input-contrast" readonly>
-<a href="http://github.com/[:username]" class="gh-contributions" data-gh-username="[:username]" target="_blank">[:username]'s contributions</a><script src="http://ikuwow.github.io/yourcontribution/widget.js"></script></textarea>
+<a href="http://github.com/[:username]" class="gh-contributions" data-gh-username="[:username]" target="_blank">[:username]'s contributions</a><script src="http://ikuwow.github.io/yourcontributions/widget.js"></script></textarea>
 
     </div>
   </div><!-- .columns -->
@@ -50,7 +50,7 @@ ga('send', 'pageview');
       <p>
       Created by <a href="http://ikuwow.github.io" target="_blank">ikuwow</a>,
       Powered by <a href="http://ghchart.rshah.org" target="_blank">Github Chart API</a>.
-      &nbsp;<a href="https://github.com/ikuwow/yourcontribution" target="_blank">Fork me on GitHub</a></p>
+      &nbsp;<a href="https://github.com/ikuwow/yourcontributions" target="_blank">Fork me on GitHub</a></p>
   </footer>
 </div><!-- .container -->
 
