--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 
 <head>
   <meta charset="utf-8"/>
+  <title>Yourcontributions: GitHub Contribution widget</title>
+  <meta name="description" content="Visualize your GitHub Contributions"/>
+  <meta name="keyword" content="GitHub,widget,contributions,commits,issues,streak,ikuwow,repositories"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/primer/2.5.0/primer.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/3.3.0/octicons.min.css"/>
   <link rel="stylesheet" href="./main.css"/>
@@ -22,7 +25,7 @@ ga('send', 'pageview');
 <div class="container">
   <div class="columns">
     <div class="four-fifths column centered">
-      <h1>yourcontributions</h1>
+      <h1>Yourcontributions</h1>
       <h2>GitHub contribution chart widget</h2>
       <form class="preview-toolbox flex-table">
         <div class="flex-table-item">
@@ -42,7 +45,7 @@ ga('send', 'pageview');
       </div>
 
       <textarea class="get-code input-contrast" readonly>
-<a href="http://github.com/[:username]" class="gh-contributions" data-gh-username="[:username]" target="_blank">[:username]'s contributions</a><script src="http://ikuwow.github.io/yourcontributions/widget.js"></script></textarea>
+<a href="http://github.com/[:username]" class="gh-contributions" data-gh-username="[:username]" target="_blank">[:username]'s contributions</a><script src="http://ikuwow.github.io/yourcontributions/widget.min.js"></script></textarea>
 
     </div>
   </div><!-- .columns -->
