Add social buttons

--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <html>
 
 <head>
+
   <meta charset="utf-8"/>
   <title>Yourcontributions: GitHub Contribution widget</title>
   <meta name="description" content="Visualize your GitHub Contributions"/>
   <meta name="keyword" content="GitHub,widget,contributions,commits,issues,streak,ikuwow,repositories"/>
+
+  <!-- facebook ogp -->
+  <meta property="og:url" content="http://ikuwow.github.io/yourcontributions/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Yourcontributions: GitHub Contribution widget" />
+  <meta property="og:description" content="Visualize your GitHub Contributions" />
+  <meta property="og:image" content="http://ikuwow.github.io/img/ikuwow_200x200.png" />
+
+  <!-- Twitter card -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@ikuwow" />
+  <meta name="twitter:title" content="Yourcontributions: GitHub Contribution widget" />
+  <meta name="twitter:description" content="Visualize your GitHub Contributions" />
+  <meta name="twitter:image" content="http://ikuwow.github.io/img/ikuwow_200x200.png" />
+
+  <!-- css -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/primer/2.5.0/primer.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/3.3.0/octicons.min.css"/>
   <link rel="stylesheet" href="./main.css"/>
+
 </head>
 
 <body>
@@ -47,6 +65,12 @@ ga('send', 'pageview');
       <textarea class="get-code input-contrast" readonly>
 <a href="http://github.com/[:username]" class="gh-contributions" data-gh-username="[:username]" target="_blank">[:username]'s contributions</a><script src="http://ikuwow.github.io/yourcontributions/widget.min.js"></script></textarea>
 
+      <div class="social-buttons">
+        <a href="https://twitter.com/share" class="twitter-share-button"{count} data-via="ikuwow" data-related="ikuwow" data-dnt="true">Tweet</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+<div class="fb-like" data-href="http://ikuwow.github.io/yourcontributions/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+        <a href="http://b.hatena.ne.jp/entry/http://ikuwow.github.io/yourcontributions/" class="hatena-bookmark-button" data-hatena-bookmark-title="Yourcontributions: GitHub Contribution widget" data-hatena-bookmark-layout="standard-balloon" data-hatena-bookmark-lang="en" title="このエントリーをはてなブックマークに追加"><img src="https://b.st-hatena.com/images/entry-button/button-only@2x.png" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="https://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
+      </div>
+
     </div>
   </div><!-- .columns -->
   <footer>
@@ -58,6 +82,14 @@ ga('send', 'pageview');
 </div><!-- .container -->
 
 <script src="./main.js"></script>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5&appId=939439589464529";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 </body>
 
 </html>
