--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ ga('send', 'pageview');
   <footer>
       <p>
       Created by <a href="https://ikuwow.github.io" target="_blank">ikuwow</a>,
-      Powered by <a href="http://ghchart.rshah.org" target="_blank">Github Chart API</a>.
+      Powered by <a href="https://ghchart.rshah.org" target="_blank">Github Chart API</a>.
       &nbsp;<a href="https://github.com/ikuwow/yourcontributions" target="_blank">Fork me on GitHub</a></p>
   </footer>
 </div><!-- .container -->
